fixed alignemnt issue on dialog

--- a/public/stylesheets/week.css
+++ b/public/stylesheets/week.css
@@ -153,3 +153,7 @@ font-family:"Arial Verdana",sans-serif;
 .datepicker::before, .datepicker::after{
   content: none !important;
 }
+
+#eventType input{
+  margin-top: 0 !important;
+}
